fix: z-index of dropdown component

--- a/src/partials/components/dropdown/dropdown.scss
+++ b/src/partials/components/dropdown/dropdown.scss
@@ -42,6 +42,7 @@
     position: absolute;
     left: 0;
     top: 44px;
+    z-index: 1000;
     border: 1px solid var(--color-dark-50);
     border-top: none;
     border-radius: 0 0 var(--bd-radius) var(--bd-radius);
